--- a/Portfolio-architecte-sophie-bluel/Backend/package.json
+++ b/Portfolio-architecte-sophie-bluel/Backend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
+    "dicer": "^0.3.1",
     "dotenv": "^16.0.0",
     "express": "^4.18.0",
     "helmet": "^5.0.2",
