--- a/Portfolio-architecte-sophie-bluel/Backend/package.json
+++ b/Portfolio-architecte-sophie-bluel/Backend/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.0",
     "helmet": "^5.0.2",
     "jsonwebtoken": "^9.0.0",
+    "jwt-decode": "^3.1.2",
     "multer": "^1.4.4",
     "sequelize": "^6.19.0",
     "sqlite3": "^5.0.5",
