--- a/Portfolio-architecte-sophie-bluel/Backend/package.json
+++ b/Portfolio-architecte-sophie-bluel/Backend/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.3.4",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dicer": "^0.3.1",
